--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "powerbelt",
-  "version": "0.0.0",
-  "description": "JavaScript Utility Belt",
-  "keywords": ["javascript", "utility"],
-  "homepage": "https://github.com/powerbelt/powerbelt#readme",
+  "name": "kathy",
+  "version": "0.0.1",
+  "description": "Math library",
+  "keywords": [
+    "javascript",
+    "utility"
+  ],
+  "homepage": "https://github.com/jesselpalmer/kathy#readme",
   "bugs": {
-    "url": "https://github.com/powerbelt/powerbelt/issues"
+    "url": "https://github.com/jesselpalmer/kathy/issues"
   },
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
     "build": "babel ./src/lib -d dist --presets latest",
     "build:watch": "babel -w ./src/lib -d dist --presets latest",
-    "coverage":
-      "nyc --reporter=lcov --reporter=text-lcov npm test && nyc report",
+    "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test && nyc report",
     "coveralls": "npm run coverage | coveralls",
     "lint": "standard",
     "lint:fix": "standard --fix",
     "precommit": "pretty-quick --staged",
     "test": "npm run test:unit && npm run lint",
-    "test:unit":
-      "NODE_ENV=test mocha './src/**/*.spec.js' --compilers js:babel-register",
-    "test:unit:watch":
-      "NODE_ENV=test mocha './src/**/*.spec.js' -w --compilers js:babel-register"
+    "test:unit": "NODE_ENV=test mocha './src/**/*.spec.js' --compilers js:babel-register",
+    "test:unit:watch": "NODE_ENV=test mocha './src/**/*.spec.js' -w --compilers js:babel-register"
   },
-  "repository": "git+https://github.com/powerbelt/powerbelt.git",
+  "repository": "git+https://github.com/jesselpalmer/kathy.git",
   "author": "Jesse Palmer <jesselpalmer@gmail.com> (http://jesselpalmer.com)",
   "contributors": [
     {
@@ -39,29 +39,37 @@
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "coveralls": "3.0.1",
-    "eslint": "4.19.1",
-    "eslint-plugin-prettier": "2.6.0",
-    "husky": "0.14.3",
+    "eslint": "7.14.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "husky": "4.3.0",
     "istanbul": "0.4.5",
-    "mocha": "5.2.0",
+    "mocha": "8.2.1",
     "mocha-junit-reporter": "1.17.0",
     "mocha-lcov-reporter": "1.3.0",
-    "nyc": "11.8.0",
-    "prettier": "1.12.1",
-    "pretty-quick": "1.5.0",
-    "standard": "11.0.1"
+    "nyc": "15.1.0",
+    "prettier": "2.2.1",
+    "pretty-quick": "3.1.0",
+    "standard": "16.0.3"
   },
   "xo": {
-    "envs": ["jasmine"]
+    "envs": [
+      "jasmine"
+    ]
   },
   "engines": {
     "node": ">=7.7.2"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   },
   "nyc": {
-    "exclude": ["**/index.js*", "**/*.spec.js", "dist"]
+    "exclude": [
+      "**/index.js*",
+      "**/*.spec.js",
+      "dist"
+    ]
   },
   "prettier": {
     "semi": false,
